--- a/css/style.css
+++ b/css/style.css
@@ -354,11 +354,14 @@ template {
   border: 0;
 }
 
+html {
+  height: 100%;
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
-  width: 100%;
   font-size: 100%;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
@@ -485,22 +488,125 @@ img {
 /* container max width -------------------  */
 body {
   font-family: 'Kumbh Sans', sans-serif;
-  background-image: url(../design/desktop-design.jpg);
+  background: -webkit-gradient(linear, left top, left bottom, from(#AF68EA), to(#7C65E7));
+  background: linear-gradient(180deg, #AF68EA 0%, #7C65E7 100%);
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 920px;
+}
+
+.main-section {
+  background-color: white;
+  overflow: hidden;
+  margin-top: 129px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 20px;
+  height: 509px;
+}
+
+.main-section::before {
+  content: url("../images/illustration-box-desktop.svg");
+  z-index: 1000;
+  position: absolute;
+  left: 20%;
+  top: 36%;
+}
+
+.image {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 460px;
+          flex: 1 1 460px;
+  background-image: url(../images/bg-pattern-desktop.svg);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-position: -571px -290px;
+  background-size: auto 185%;
+  height: auto;
 }
 
-body:before {
-  content: "";
+.image img {
   display: block;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  z-index: -1;
+  position: relative;
+  top: 74px;
+  right: 74px;
 }
 
-.content__hiden-text {
-  display: none;
+.content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 460px;
+          flex: 1 1 460px;
+  padding: 64px 90px 60px 16px;
+  overflow-y: scroll;
+}
+
+.content h1 {
+  font-weight: 700;
+  font-size: 2rem;
+  text-transform: uppercase;
+  margin-bottom: 40px;
+}
+
+.content__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-right: 20px;
+}
+
+.content__header span {
+  font-size: 14px;
+}
+
+.content__list li {
+  padding-bottom: 16px;
+  margin-bottom: 17px;
+  border-bottom: 1px solid #e7e7e9;
+}
+
+.content__header {
+  cursor: pointer;
+  color: #4a4b5e;
+}
+
+.content__header:hover {
+  color: #f47c57;
+}
+
+details img {
+  -webkit-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
+}
+
+details[open] summary {
+  color: #1d1e35;
+  font-weight: 700;
+}
+
+details[open] summary img {
+  -webkit-transform: rotate(-180deg);
+          transform: rotate(-180deg);
+}
+
+details[open] summary:hover {
+  color: inherit;
+}
+
+details summary {
+  list-style: none;
+}
+
+details p {
+  font-size: 12px;
+  line-height: 18px;
+  margin: 12px 0 0;
+  color: #787887;
 }
