--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -9,11 +9,15 @@
     border: 0;
 }
 
+html {
+    height: 100%;
+}
+
 html,
 body {
     margin: 0;
     padding: 0;
-    width: 100%;
+    // width: 100%;
     font-size: 100%;
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
