--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,23 +31,120 @@
 
 body {
     font-family: 'Kumbh Sans', sans-serif;
-    background-image: url(../design/desktop-design.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: linear-gradient(180deg, #AF68EA 0%, #7C65E7 100%);
+}
 
-    &:before {
-        content: "";
-        display: block;
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        left: 0;
-        top: 0;
-        z-index: -1;
-        // background-color: rgba(255, 255, 255, 0.1); 
+.container {
+    margin: 0 auto;
+    max-width: 920px;
+}
+
+.main-section {
+    background-color: white;
+    overflow: hidden;
+    margin-top: 129px;
+    display: flex;
+    border-radius: 20px;
+    height: 509px;
+
+    &::before {
+        content: url('../images/illustration-box-desktop.svg');
+        z-index: 1000;
+        position: absolute;
+        left: 20%;
+        top: 36%;
     }
 }
 
-.content__hiden-text {
-    display: none;
+.image {
+    flex: 1 1 460px;
+    background-image: url(../images/bg-pattern-desktop.svg);
+    background-repeat: no-repeat;
+    background-position: -571px -290px;
+    background-size: auto 185%;
+    height: auto;
+
+    img {
+        display: block;
+        position: relative;
+        top: 74px;
+        right: 74px;
+
+    }
+}
+
+.content {
+    flex: 1 1 460px;
+    padding: 64px 90px 60px 16px;
+    overflow-y: scroll;
+
+    h1 {
+        font-weight: 700;
+        font-size: 2rem;
+        text-transform: uppercase;
+        margin-bottom: 40px;
+    }
+
+    &__header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-right: 20px;
+
+        span {
+            font-size: 14px;
+        }
+    }
+
+    &__list {
+
+        li {
+            padding-bottom: 16px;
+            margin-bottom: 17px;
+            border-bottom: 1px solid $card-background;
+        }
+    }
+}
+
+.content__header {
+    cursor: pointer;
+    color: $header-regular;
+
+    &:hover {
+        color: $header-hover;
+    }
+}
+
+details {
+
+    img {
+        transition: 0.3s ease-out;
+    }
+
+    &[open] {
+
+        summary {
+            color: $header-selected;
+            font-weight: 700;
+
+            img {
+                transform: rotate(-180deg);
+            }
+
+            &:hover {
+                color: inherit;
+            }
+        }
+    }
+
+    summary {
+        list-style: none;
+    }
+
+    p {
+        font-size: 12px;
+        line-height: 18px;
+        margin: 12px 0 0;
+        color: $text-color;
+    }
 }
