--- a/css/style.css
+++ b/css/style.css
@@ -494,16 +494,21 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 920px;
+  padding: 0 15px;
+  max-width: 950px;
+  margin-bottom: 24px;
 }
 
 .main-section {
   background-color: white;
-  overflow: hidden;
   margin-top: 129px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   border-radius: 20px;
   height: 509px;
 }
@@ -511,23 +516,32 @@ body {
 .main-section::before {
   content: url("../images/illustration-box-desktop.svg");
   z-index: 1000;
-  position: absolute;
-  left: 20%;
-  top: 36%;
+  position: relative;
+  width: 0;
+  right: 100px;
+  top: 40%;
+  z-index: 1000;
 }
 
 .image {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 460px;
-          flex: 1 1 460px;
+      -ms-flex: 1 0 50%;
+          flex: 1 0 50%;
   background-image: url(../images/bg-pattern-desktop.svg);
   background-repeat: no-repeat;
   background-position: -571px -290px;
   background-size: auto 185%;
   height: auto;
+  background-attachment: local;
+  overflow: hidden;
+}
+
+.image .image__mobile {
+  display: none;
 }
 
 .image img {
+  width: 100%;
   display: block;
   position: relative;
   top: 74px;
@@ -536,9 +550,9 @@ body {
 
 .content {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 460px;
-          flex: 1 1 460px;
-  padding: 64px 90px 60px 16px;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  padding: 64px 90px 60px 0;
   overflow-y: scroll;
 }
 
@@ -609,4 +623,59 @@ details p {
   line-height: 18px;
   margin: 12px 0 0;
   color: #787887;
+  max-width: 320px;
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    max-width: 500px;
+  }
+  .main-section {
+    padding: 0 24px 46px 24px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: auto;
+  }
+  .main-section::before {
+    display: none;
+  }
+  .image {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 130px;
+            flex: 1 0 130px;
+    background-image: url(../images/bg-pattern-mobile.svg);
+    background-position: top center;
+    background-size: auto;
+    overflow: visible;
+  }
+  .image .image__desktop {
+    display: none;
+  }
+  .image .image__mobile {
+    margin: 0 auto;
+    display: block;
+    top: -80px;
+    width: 200px;
+    height: auto;
+  }
+  .image img {
+    right: 0;
+  }
+  .content {
+    padding: 0 24px;
+  }
+  .content h1 {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .content {
+    padding: 0;
+  }
+  .content__header {
+    padding-right: 0;
+  }
 }
